--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -8,7 +8,9 @@
                 <hr>
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Broker</a>
                 <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Auth</a>
-                <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log</a>
+                <a id="logHttpBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log HTTP</a>
+                <a id="logRabbitBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log Rabbit</a>
+                <a id="logRpcBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Log RPC</a>
                 <a id="mailBtn" class="btn btn-outline-secondary" href="javascript:void(0);">Test Mail</a>
 
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
@@ -37,21 +39,98 @@
     <script>
     let brokerBtn = document.getElementById("brokerBtn");
     let authBrokerBtn = document.getElementById("authBrokerBtn");
-    let logBtn = document.getElementById("logBtn");
+    let logHttpBtn = document.getElementById("logHttpBtn");
+    let logRabbitBtn = document.getElementById("logRabbitBtn");
+    let logRpcBtn = document.getElementById("logRpcBtn");
     let output = document.getElementById("output");
     let sent = document.getElementById("payload");
     let received = document.getElementById("received");
     let mailBtn = document.getElementById("mailBtn");
 
-    logBtn.addEventListener("click", function() {
+    logHttpBtn.addEventListener("click", function() {
         const payload = {
-            action: "log",
+            action: "log-http",
             log: {
                 name: "event",
-                data: "Some kind of data",
+                data: "Some kind of data via HTTP",
             }
         }
 
+        sendRequest(payload);
+    })
+
+    logRabbitBtn.addEventListener("click", function() {
+        const payload = {
+            action: "log-rabbit",
+            log: {
+                name: "event",
+                data: "Some kind of data via RabbitMQ",
+            }
+        }
+
+        sendRequest(payload);
+    })
+
+    logRpcBtn.addEventListener("click", function() {
+        const payload = {
+            action: "log-rpc",
+            log: {
+                name: "event",
+                data: "Some kind of data via RPC",
+            }
+        }
+
+        sendRequest(payload);
+    })
+
+    authBrokerBtn.addEventListener("click", function() {
+        const payload = {
+            action: "auth",
+            auth: {
+                email: "admin@example.com",
+                password: "verysecret",
+            }
+        }
+
+        sendRequest(payload);
+    })
+
+    brokerBtn.addEventListener("click", function() {
+        const body = {
+            method: 'POST',
+        }
+
+        fetch("http:\/\/localhost:8080", body)
+        .then((response) => response.json())
+        .then((data) => {
+            sent.innerHTML ="empty post request";
+            received.innerHTML = JSON.stringify(data, undefined, 4);
+            if (data.error) {
+                console.log(data.message);
+            } else {
+                output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
+            }
+        })
+        .catch((error) => {
+            output.innerHTML += "<br><br>Eror: " + error;
+        })
+    })
+
+    mailBtn.addEventListener("click", function() {
+        const payload = {
+            action: "mail",
+            mail: {
+                from: "me@example.com",
+                to: "you@there.com",
+                subject: "Test email",
+                message: "Hello world!",
+            }
+        }
+
+        sendRequest(payload);
+    })
+
+    function sendRequest(payload) {
         const headers = new Headers();
         headers.append("Content-Type", "application/json");
 
@@ -74,102 +153,9 @@
         })
         .catch((error) => {
             output.innerHTML += "<br><br>Eror: " + error;
-        })        
-    })
-
-    authBrokerBtn.addEventListener("click", function() {
-
-        const payload = {
-            action: "auth",
-            auth: {
-                email: "admin@example.com",
-                password: "verysecret",
-            }
-        }
-
-        const headers = new Headers();
-        headers.append("Content-Type", "application/json");
-
-        const body = {
-            method: 'POST',
-            body: JSON.stringify(payload),
-            headers: headers,
-        }
-
-        fetch("http:\/\/localhost:8080/handle", body)
-        .then((response) => response.json())
-        .then((data) => {
-            sent.innerHTML = JSON.stringify(payload, undefined, 4);
-            received.innerHTML = JSON.stringify(data, undefined, 4);
-            if (data.error) {
-                output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
-            } else {
-                output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
-            }
         })
-        .catch((error) => {
-            output.innerHTML += "<br><br>Eror: " + error;
-        })
-    })
+    }
 
-    brokerBtn.addEventListener("click", function() {
-
-        const body = {
-            method: 'POST',
-        }
-
-        fetch("http:\/\/localhost:8080", body)
-        .then((response) => response.json())
-        .then((data) => {
-            sent.innerHTML ="empty post request";
-            received.innerHTML = JSON.stringify(data, undefined, 4);
-            if (data.error) {
-                console.log(data.message);
-            } else {
-                output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
-            }
-        })
-        .catch((error) => {
-            output.innerHTML += "<br><br>Eror: " + error;
-        })
-    })
-
-    mailBtn.addEventListener("click", function() {
-
-        const payload = {
-            action: "mail",
-            mail: {
-                from: "me@example.com",
-                to: "you@there.com",
-                subject: "Test email",
-                message: "Hello world!",
-            }
-        }
-
-        const headers = new Headers();
-        headers.append("Content-Type", "application/json");
-
-        const body = {
-            method: 'POST',
-            body: JSON.stringify(payload),
-            headers: headers,
-        }
-
-        fetch("http:\/\/localhost:8080/handle", body)
-        .then((response) => response.json())
-        .then((data) => {
-            sent.innerHTML = JSON.stringify(payload, undefined, 4);
-            received.innerHTML = JSON.stringify(data, undefined, 4);
-            if (data.error) {
-                output.innerHTML += `<br><strong>Error:</strong> ${data.message}`;
-            } else {
-                output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
-            }
-        })
-        .catch((error) => {
-            output.innerHTML += "<br><br>Eror: " + error;
-        })
-    })
         
     </script>
 {{end}}
