--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -114,7 +114,7 @@
             method: 'POST',
         }
 
-        fetch("http:\/\/localhost:8080", body)
+        fetch({{print .BrokerURL ""}}, body)
         .then((response) => response.json())
         .then((data) => {
             sent.innerHTML ="empty post request";
@@ -144,7 +144,7 @@
         sendRequest(payload);
     })
 
-    function sendRequest(payload) {
+    function sendRequest(payload, base_url="{{.BrokerURL}}") {
         const headers = new Headers();
         headers.append("Content-Type", "application/json");
 
@@ -154,7 +154,7 @@
             headers: headers,
         }
 
-        fetch("http:\/\/localhost:8080/handle", body)
+        fetch(base_url + "/handle", body)
         .then((response) => response.json())
         .then((data) => {
             sent.innerHTML = JSON.stringify(payload, undefined, 4);
